<resources>
    <string name="app_name">CrazyNotes</string>
    <string name="prefer">Prefer</string>
    <string name="preferSum">相关设置</string>
    <string name="expandable">Expandable</string>
    <string name="logout_expand">退出expand</string>
    <string name="open_prefer">打开prefer</string>
    <string name="expand_center">扩展中心</string>
    <string name="sound">声音</string>
    <string name="background">背景</string>

    <string-array name="gender_name_list">
        <item>male</item>
        <item>female</item>
    </string-array>

    <string-array name="gender_value_list">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="light_strength_list" >
        <item >暗</item>
        <item >亮</item>
        <item >最亮</item>
    </string-array>

    <string-array name="light_value_list" >
        <item >1</item>
        <item >2</item>
        <item >3</item>
    </string-array>

</resources>
